nohup.out

  You can now view your Streamlit app in your browser.

  Local URL: http://localhost:8501
  Network URL: http://192.168.18.101:8501
  External URL: http://164.163.220.203:8501

2025-10-03 00:05:48.995 Script compilation error
Traceback (most recent call last):
  File "/home/pensec/ProjetosVScode/Dados_Dashboards/Vendas_teste/venv_vendas/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 571, in _run_script
    code = self._script_cache.get_bytecode(script_path)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/pensec/ProjetosVScode/Dados_Dashboards/Vendas_teste/venv_vendas/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/pensec/ProjetosVScode/Dados_Dashboards/Vendas_teste/venv_vendas/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.11/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/pensec/ProjetosVScode/Dados_Dashboards/Vendas_teste/dashboard/app.py", line 147
    if st.session_state.role == "admin" and not st.session_state.get("show_config", False):
    ^^
IndentationError: expected an indented block after 'else' statement on line 145
2025-10-03 00:05:49.000 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.
  Stopping...
